Fix overflow x axis

--- a/src/assets/style/_content-box.scss
+++ b/src/assets/style/_content-box.scss
@@ -7,5 +7,6 @@
 	padding: var(--space);
   border-radius: var(--radius);
   box-shadow: 1px 1px 5px 0 rgba(0,0,0,.02), 1px 1px 15px 0 rgba(0,0,0,.03);
-  transition: transform .3s, background-color .3s, box-shadow .6s;
+	transition: transform .3s, background-color .3s, box-shadow .6s;
+	overflow-x: hidden;
 }
